kubernetes/smart-home/homebridge/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: homebridge
  namespace: smart-home
  labels:
    app.kubernetes.io/name: homebridge
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: homebridge
  ports:
    - name: http
      port: 8581
      targetPort: http
      protocol: TCP
