kubernetes/smart-home/homebridge/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: homebridge
  namespace: smart-home
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`homebridge.home.mcnees.me`)
      kind: Rule
      services:
        - name: homebridge
          port: 8581
  tls:
    secretName: homebridge-tls
